--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FireBaseTutorial</string>
+    <string name="prefs_file">edu.uvg.com.example.laboratorio9.PREFERENCE_FILE_KEY</string>
+    <string name="error">Error en la autenticación</string>
+    <string name="accept">Autenticación con éxito</string>
 </resources>
